# functional-python

./: .gitignore  README.md  common.py  helpers.py  main.py  mypy.ini  pyproject.toml  requirements.txt
functional_python/data/: garage.py  garage_dataoriented.py  office.py  office_functional.py
functional_python/functions/: add_things.py  dictionaries.py  filtering.py  find_word.py  main.py  mutation_or_recursion.py  search_file.py  search_file_functional.py  transform_data.py
functional_python/rails/: __init__.py  funcs.py  railway.py  track.py
functional_python/rails_experiments/: bad-data.csv  data.csv  example.py  main.py  with_code_separation.py  with_error_handling.py  with_rails.py
functional_python/railway/: __init__.py  funcs.py  rails.py  result.py
functional_python/toolz_experiments/: helpers.py  main.py
src/functions/: main.py  mutations.py
src/toolz_experiments/: main.py
